# Esp32MotorDriver

./: .gitIgnore  partitions.csv  test.sh
main/: CMakeLists.txt  appConfig.h  app_main.c  setup.cpp  setup.h
main/CeedlingTest/: project.yml
main/CeedlingTest/test/: test_phaseGen.c
main/deprecated/: AdcDeprecated.cpp  AdcDeprecated.h  OpenLoopClosedLoop.cpp  PwmInterrupt.h  PwmInterruptPin.cpp  PwmInterruptPin.h  PwmPair.cpp  PwmPair.h  PwmPin.cpp  WaveformGen.h
main/http/: HttpServer.cpp  HttpServer.h  NvsFlash.cpp  NvsFlash.h  RouteHandlers.cpp  RouteHandlers.h  Routes.cpp  Routes.h  WifiConnect.cpp  WifiConnect.h
main/models/: Adc.cpp  Adc.h  ChargePump.cpp  ChargePump.h  Contactors.cpp  Contactors.h  DCVoltage.cpp  DCVoltage.h  Derivator.cpp  Derivator.h  FastLog.cpp  FastLog.h  GoPedal.cpp  GoPedal.h  Integrator.cpp  Integrator.h  McPwmInterrupt.cpp  McPwmInterrupt.h  McPwmPair.cpp  McPwmPair.h  OpenLoopClosedLoop.h  PhaseGen.cpp  PhaseGenTimer.cpp  PhaseGenTimer.h  Pid.cpp  Pid.h  PwmInterrupt.cpp  PwmInterrupt.h  PwmInterruptPin.cpp  PwmInterruptPin.h  PwmPair.cpp  PwmPair.h  PwmPairs.cpp  PwmPairs.h  PwmPin.cpp  PwmPin.h  PwmTimer.cpp  PwmTimer.h  Quadrature.cpp  Quadrature.h  (+18 more)
main/telemetry/: DataPoint.h  FileNames.h  Spiffs.cpp  Spiffs.h  TelemetryToFile.cpp  TelemetryToFile.h  WritePosition.cpp  WritePosition.h
main/test/: test_Adc.cpp  test_Calibrate.cpp  test_Contactors.cpp  test_DcVoltage.cpp  test_Derivator.cpp  test_Dynamic.cpp  test_GoPedal.cpp  test_Hardware.cpp  test_HttpServer.cpp  test_Integrator.cpp  test_Malloc.cpp  test_McPwmPair.cpp  test_Performance.cpp  test_PhaseGenTimer.cpp  test_Pid.cpp  test_PwmPairs.cpp  test_RotorSpeed.cpp  test_Spiffs.cpp  test_SvPwm.cpp  test_TelemetryToFile.cpp  test_Temp.cpp  test_Torque.cpp  test_TorqueControl.cpp  test_TunedParameters.cpp  test_Vfd.cpp  test_VfdOpenLoop.cpp  test_WaveformGen.cpp  test_WifiConnect.cpp  test_WritePosition.cpp  test_phaseGen.cpp  test_runner.cpp  test_runner.h
main/test/deprecated/: test_ChargePump.cpp  test_WaveformGen.cpp
main/tuning/: Dynamic.cpp  Dynamic.h  StaticTorqueMeasurement.cpp  StaticTorqueMeasurement.h  Torque.cpp  Torque.h
unity-app/: CMakeLists.txt
